# ParalISI

./: .gitignore  ACKNOWLEDGMENTS.md  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml  requirements-dev.txt  setup.py
docs/codebase_analysis/: generate_matlab_docs.py  generate_python_docs.py  matlab_codebase_summary.md  original_tree.md  python_codebase_summary.md
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: index.rst
src/PyISI/analysis/: maps.py  metrics.py  orientation.py  quality.py  statistics.py
src/PyISI/core/: data_types.py  exceptions.py  validation.py
src/PyISI/processing/: filters.py  registration.py  signal.py  trial_processor.py
src/PyISI/processing/segmentation/: retinotopy.py
src/PyISI/utils/: parallel.py
src/paralisi/analysis/: maps.py  metrics.py
src/paralisi/core/: __init__.py  config.py  experiment.py  interfaces.py  managers.py  validation.py
src/paralisi/core/configurations/: __init__.py  acquisition_config.py  experiment_config.py  filter_config.py  processing_config.py  trial_processing_config.py
src/paralisi/core/data/: __init__.py  analyzer_data.py  area_data.py  data.py  masks.py  processed_trial.py  trial_data.py  trial_metadata.py
src/paralisi/core/exceptions/: __init__.py  (+4 more)
src/paralisi/io/: __init__.py  loaders.py  readers.py  writers.py
src/paralisi/processing/: registration.py  signal.py  trial_processor.py
src/paralisi/utils/: decorators.py
src/pyisi/core/: factories.py  stores.py
tests/test_processing/: test_pipeline.py  test_segmentation.py
(+73 files in other folders)
