# PyISI/pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyISI"
version = "0.1.0"
description = "PyISI is a modern Python library implementing the intrinsic signal imaging (ISI) analysis protocol described in Juavinett et al. (2016). Developed in the Kim Laboratory at UC Santa Cruz, this project modernizes the original MATLAB codebase with contemporary software engineering practices, improved performance, and enhanced usability."
authors = [{ name = "Your Name", email = "admmurra@ucsc.edu" }]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-image>=0.19",
    "torch>=1.10",        # For GPU acceleration
    "matplotlib>=3.5",
    "pandas>=1.4",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "isort>=5.0",
    "mypy>=0.9",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-autodoc",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true
